--- a/_posts/2016-12-28-grvsnr.md
+++ b/_posts/2016-12-28-grvsnr.md
@@ -61,7 +61,7 @@ plt.show()
 
 
 
-![png]({{ site.baseurl }}/images/grvsnr/output_2_1.png)
+![png]({{ site.url }}/images/grvsnr/output_2_1.png)
 
 
 But let's try now a different learning rate
