--- a/_posts/2016-12-28-grvsnr.md
+++ b/_posts/2016-12-28-grvsnr.md
@@ -92,7 +92,7 @@ plt.show()
 
 
 
-![png](https://github.com/artirj/artirj.github.io/blob/master/_includes/output_4_1.png?raw=true)
+![png]({{ site.baseurl }}/images/grvsnr/output_4_1.png)
 
 
 The performance of the algorithms seems to depends strongly on their learning rate.
@@ -211,7 +211,7 @@ print("Final cost, solution, and iterations of Minimize: %f"%cost(x_sys)[0],x_sy
 ```
 
 
-![png](https://github.com/artirj/artirj.github.io/blob/master/_includes/output_8_0.png?raw=true)
+![png]({{ site.baseurl }}/images/grvsnr/output_8_0.png)
 
 
     Final cost, solution, and iterations of Newton-Raphson: 0.000001 [ 0.92239283 -1.7743928] 12
@@ -234,7 +234,7 @@ plt.show()
 ```
 
 
-![png](https://github.com/artirj/artirj.github.io/blob/master/_includes/output_9_0.png?raw=true)
+![png]({{ site.baseurl }}/images/grvsnr/output_9_0.png)
 
 
 
