--- a/_posts/2017-03-15-titanic.md
+++ b/_posts/2017-03-15-titanic.md
@@ -4,6 +4,7 @@ title:  An analysis of the Titanic dataset
 categories:
  - notebooks
  - kaggle
+excerpt: "The hello world of data science"
 --- 
 An analysis of the Titanic dataset
 
