--- a/_posts/2017-03-15-mnistcnn.md.md
+++ b/_posts/2017-03-15-mnistcnn.md.md
@@ -4,6 +4,7 @@ title:  MNIST convnet
 categories: 
 - notebooks
 - deeplearning
+excerpt: "Using batch norm, dropout, and data augmentation"
 ---
 # MNIST convnet (batch norm, dropout, data augmentation)
 
